Fixed scrollbars (overflow)

--- a/src/app/components/account-list/account-list.component.scss
+++ b/src/app/components/account-list/account-list.component.scss
@@ -1,6 +1,7 @@
 :host {
     flex: 0 1 300px;
     border-right: 1px solid rgba(0, 0, 0, 0.5);
+    overflow-y: auto;
 
     ul {
         display: block;
