--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -5,7 +5,7 @@
 
     .messages-container {
         flex: 1 1 auto;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         ul {
             display: flex;
